various improvements, including removing .html ext and fixing some random layout issues

--- a/css/about.css
+++ b/css/about.css
@@ -1,4 +1,4 @@
-/*#excomm:after {
+/*#excomm {
     content: '';
     flex: auto;
 }*/
@@ -25,8 +25,8 @@
 .excomm-image,
 .senators-image,
 .sponsors-image {
-    width: 100%;
-    height: calc(25vh - 4vw);
+    width: 12vw;
+    height: 12vw;
     margin-bottom: 1vh;
 }
 
@@ -34,12 +34,11 @@
 .excomm-image:after,
 .senators-image:after,
 .sponsors-image:after {
-    width: calc(25vh - 4vw);
-    height: calc(25vh - 4vw);
+    width: 100%;
+    height: 100%;
     content: '';
     display: block;
     position: relative;
-    left: calc(50% - 10vh);
     background-image: url('../img/profile.jpg');
     background-size: contain;
     background-position: center;
@@ -73,8 +72,9 @@
 .senators-intro,
 .sponsors-intro {
     text-align: center;
-    margin: 2vw;
-    flex-basis: calc(25% - 4vw);
+    margin: 1.5vw;
+    /*flex-basis: calc(25% - 4vw);*/
+    max-width: 12vw;
     flex-wrap: wrap;
 }
 
