--- a/css/responsive.css
+++ b/css/responsive.css
@@ -62,6 +62,7 @@
     }
     #menu>a {
         width: 100%;
+        min-height: 75px;
         height: 10vh;
         flex-basis: auto;
     }
@@ -144,7 +145,7 @@
         font-size: 1.3em;
     }
     #dome:after {
-        background-position-y: 10vh;
+        background-position-y: 1vh;
     }
     /*.officers-intro, .excomm-intro, .senator-intro, .sponsor-intro {
         flex-basis: calc(35% - 4vw);
